objects/cm_Industry_Code__c.object
<CustomObject>
    <description>Used to track industry codes.</description>
    <fields>
        <fullName>cm_Industry_Code_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Industry_Code__c</fullName>
        <description>Contains Industry Code value.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Is_ACH_Prohibited_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field represent if the industry is ACH Prohibited based on TBOM criteria</description>
        <label>Is ACH Prohibited Industry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cm_Is_ACH_Restricted_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field represents if the industry is ACH Restricted based on TBOM criteria</description>
        <label>Is ACH Restricted Industry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cm_Is_RDC_Prohibited_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field represents if the industry is RDC Prohibited based on TBOM criteria</description>
        <label>Is RDC Prohibited Industry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cm_Is_RDC_Restricted_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field represents the industry is RDC Restricted based on TBOM Criteria</description>
        <label>Is RDC Restricted Industry?</label>
        <type>Checkbox</type>
    </fields>
    <label>Industry Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>